L/lxcfs-on-kubernetes-1rD9wYzTE2/lxcfs-on-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-lxcfs-on-kubernetes-webhook-service
  namespace: 1rD9wYzTE2
  labels:
    helm.sh/chart: lxcfs-on-kubernetes-0.1.3
    app.kubernetes.io/name: lxcfs-on-kubernetes
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/compose: manager
    app.kubernetes.io/version: 0.1.3
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: lxcfs-on-kubernetes
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/compose: manager
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    helm.sh/chart: lxcfs-on-kubernetes-0.1.3
    app.kubernetes.io/name: lxcfs-on-kubernetes
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/compose: lxcfs
    app.kubernetes.io/version: 0.1.3
    app.kubernetes.io/managed-by: Helm
  name: release-name-lxcfs-on-kubernetes-controller-manager-daemonset
  namespace: 1rD9wYzTE2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lxcfs-on-kubernetes
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/compose: lxcfs
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/name: lxcfs-on-kubernetes
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/compose: lxcfs
    spec:
      containers:
        - args:
            - -l
            - --enable-cfs
            - --enable-pidfd
            - /var/lib/lxcfs
          image: ghcr.io/cndoit18/lxcfs-agent:v0.1.3
          imagePullPolicy: IfNotPresent
          name: agent
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 200M
          securityContext:
            privileged: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/lib/lxcfs
              mountPropagation: Bidirectional
              name: lxcfs
            - mountPath: /sys/fs/cgroup
              name: cgroup
      hostPID: true
      volumes:
        - hostPath:
            path: /var/lib/lxcfs
            type: DirectoryOrCreate
          name: lxcfs
        - hostPath:
            path: /sys/fs/cgroup
          name: cgroup
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: lxcfs-on-kubernetes-0.1.3
    app.kubernetes.io/name: lxcfs-on-kubernetes
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/compose: manager
    app.kubernetes.io/version: 0.1.3
    app.kubernetes.io/managed-by: Helm
  name: release-name-lxcfs-on-kubernetes-controller-manager
  namespace: 1rD9wYzTE2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lxcfs-on-kubernetes
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/compose: manager
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/name: lxcfs-on-kubernetes
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/compose: manager
    spec:
      containers:
        - args:
            - --lxcfs-path=/var/lib/lxcfs
            - --v=4
            - --leader-election=false
            - --leader-election-namespace=kube-system
            - --leader-election-id=lxcfs-on-kubernetes-leader-election
          image: ghcr.io/cndoit18/lxcfs-manager:v0.1.3
          imagePullPolicy: IfNotPresent
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 200Mi
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: release-name-lxcfs-on-kubernetes-certificate
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-lxcfs-on-kubernetes-serving-cert
  name: release-name-lxcfs-on-kubernetes-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-lxcfs-on-kubernetes-webhook-service
        namespace: default
        path: /mount-lxcfs
    failurePolicy: Ignore
    name: club.cndoit18.lxcfs-on-kubernetes
    namespaceSelector:
      matchLabels:
        mount-lxcfs: enabled
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: NoneOnDryRun
